--- a/Retrieval_based_Voice_Conversion_WebUI.ipynb
+++ b/Retrieval_based_Voice_Conversion_WebUI.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0PycvqWX1axk"
+        "id": "KEORuxklIDjv"
       },
       "source": [
         "# [Retrieval-based-Voice-Conversion-WebUI](https://github.com/RVC-Project/Retrieval-based-Voice-Conversion-WebUI) Training notebook"
@@ -70,7 +70,7 @@
       "source": [
         "# @title 克隆仓库\n",
         "\n",
-        "!git clone https://github.com/RVC-Project/Retrieval-based-Voice-Conversion-WebUI.git\n",
+        "!git clone --depth=1 -b stable https://github.com/fumiama/Retrieval-based-Voice-Conversion-WebUI\n",
         "%cd /content/Retrieval-based-Voice-Conversion-WebUI\n",
         "!mkdir -p pretrained uvr5_weights"
       ]
@@ -151,7 +151,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "a54q-8s-1axq"
+        "id": "-Lbuj5UuIDjz"
       },
       "outputs": [],
       "source": [
@@ -194,20 +194,26 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/pytorch/fairseq\n",
-        "%cd /content/fairseq/\n",
-        "!python -m pip install --editable .\n",
-        "%cd /content\n",
-        "\n",
-        "! echo $PYTHONPATH\n",
-        "\n",
+        "!git clone https://github.com/pytorch/fairseq #  && cd fairseq && pip install --editable ./\n",
+        "!cd fairseq && git checkout nllb && pip install -e . && python setup.py build_ext --inplace\n",
+        "! git clone https://github.com/facebookresearch/fairscale.git && cd fairscale && git checkout origin/experts_lt_gpus_moe_reload_fix && pip install -e ."
+      ],
+      "metadata": {
+        "id": "kKOLvyLWIzDm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import os\n",
         "os.environ['PYTHONPATH'] += \":/content/fairseq/\"\n",
-        "\n",
-        "! echo $PYTHONPATH"
+        "os.environ['PYTHONPATH'] += \":/content/fairscale/\"\n",
+        "os.environ['PYTHONPATH'] += \":/content/fairscale/fairseq/\""
       ],
       "metadata": {
-        "id": "EZlHk9IJ4PhN"
+        "id": "DLieXVV6JhZu"
       },
       "execution_count": null,
       "outputs": []
@@ -215,10 +221,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -r /content/Retrieval-based-Voice-Conversion-WebUI/requirements.txt"
+        "import sys\n",
+        "sys.path.append(\"/content/fairseq/fairseq\")\n",
+        "sys.path"
       ],
       "metadata": {
-        "id": "3C89gR2I2c5S"
+        "id": "vxUZNVbhKqUp"
       },
       "execution_count": null,
       "outputs": []
@@ -226,35 +234,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -r /content/Retrieval-based-Voice-Conversion-WebUI/Retrieval-based-Voice-Conversion-WebUI/requirements-win-for-realtime_vc_gui.txt"
+        "PROJECT_PATH = os.path.abspath(\"/content/Retrieval-based-Voice-Conversion-WebUI\")\n",
+        "if PROJECT_PATH not in sys.path:\n",
+        "    sys.path.append(PROJECT_PATH)"
       ],
       "metadata": {
-        "collapsed": true,
-        "id": "pC7t8tYy2ZaY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python /content/Retrieval-based-Voice-Conversion-WebUI/Retrieval-based-Voice-Conversion-WebUI/tools/download_models.py"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "voOYq2Dw2lHT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install python-dotenv ffmpeg pyworld faiss-gpu"
-      ],
-      "metadata": {
-        "collapsed": true,
-        "id": "eHQd0G7z3mQV"
+        "id": "eKJ4I9M4Lymr"
       },
       "execution_count": null,
       "outputs": []
@@ -265,7 +250,7 @@
         "!pip install omegaconf"
       ],
       "metadata": {
-        "id": "wiWwivK_6cG-"
+        "id": "MVWadGw_L01r"
       },
       "execution_count": null,
       "outputs": []
@@ -273,10 +258,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install hydra-core"
+        "!pip uninstall numpy"
       ],
       "metadata": {
-        "id": "aHWVMW2f62qs"
+        "id": "FRFpmMz_MW0M"
       },
       "execution_count": null,
       "outputs": []
@@ -284,10 +269,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install bitarray"
+        "!python3.8 --version"
       ],
       "metadata": {
-        "id": "AOxU_Gou7J-2"
+        "id": "LD9Wz5nrNdmq"
       },
       "execution_count": null,
       "outputs": []
@@ -295,10 +280,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -r /content/Retrieval-based-Voice-Conversion-WebUI/Retrieval-based-Voice-Conversion-WebUI/requirements-ipex.txt"
+        "!sudo apt install python3.8"
       ],
       "metadata": {
-        "id": "yZRrrj5u7l3O"
+        "id": "GrZUb--tNVIe"
       },
       "execution_count": null,
       "outputs": []
@@ -306,10 +291,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install torch torchvision torchaudio"
+        "!pip3 install --force-reinstall numpy==1.18.5"
       ],
       "metadata": {
-        "id": "-3-KXYtE7wmU"
+        "id": "VS2FMOTqMbOe"
       },
       "execution_count": null,
       "outputs": []
@@ -317,10 +302,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install poetry"
+        "!pip install hydra-core bitarray"
       ],
       "metadata": {
-        "id": "eGxIChts76IL"
+        "id": "_Ie6DbdBMDqK"
       },
       "execution_count": null,
       "outputs": []
@@ -328,10 +313,23 @@
     {
       "cell_type": "code",
       "source": [
-        "!poetry install"
+        "import sys\n",
+        "import os\n",
+        "\n",
+        "# Get the absolute path to the fairseq directory\n",
+        "FAIRSEQ_PATH = os.path.abspath(\n",
+        "    \"/content/Retrieval-based-Voice-Conversion-WebUI/fairseq\"\n",
+        ")\n",
+        "\n",
+        "# Add the fairseq directory to sys.path\n",
+        "if FAIRSEQ_PATH not in sys.path:\n",
+        "    sys.path.append(FAIRSEQ_PATH)\n",
+        "\n",
+        "# Now you can import checkpoint_utils\n",
+        "from fairseq import checkpoint_utils\n"
       ],
       "metadata": {
-        "id": "8sZsx5U174sf"
+        "id": "_jfeqt4vLX8e"
       },
       "execution_count": null,
       "outputs": []
@@ -348,20 +346,8 @@
         "%cd /content/Retrieval-based-Voice-Conversion-WebUI\n",
         "# %load_ext tensorboard\n",
         "# %tensorboard --logdir /content/Retrieval-based-Voice-Conversion-WebUI/logs\n",
-        "!python3 /content/Retrieval-based-Voice-Conversion-WebUI/infer-web.py --colab --pycmd python3"
+        "!python3 infer-web.py --colab --pycmd python3"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.name"
-      ],
-      "metadata": {
-        "id": "OnFUS_z-3KwH"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
